fix gap for stack trace

--- a/packages/reporter/src/errors/errors.scss
+++ b/packages/reporter/src/errors/errors.scss
@@ -207,7 +207,7 @@ $code-border-radius: 4px;
           font-size: 14px;
           font-weight: 500;
           display: inline-flex;
-          gap: 2px;
+          gap: 4px;
           align-items: center;
         }
       }
